<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.janeeastwood123.refundo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lin1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:id="@+id/img"
            android:layout_alignParentRight="true"
            android:src="@drawable/refundo"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:typeface="normal"
        android:textSize="14sp"
        android:textColor="@color/navy"
        android:id="@+id/textViewLogin"
        android:layout_below="@id/lin1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fname"
        android:textColorHint="@color/navy"
        android:hint="@string/fname"
        android:backgroundTint="@android:color/holo_green_light"
        android:gravity="center_horizontal"
        android:layout_below="@id/textViewLogin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sname"
        android:textColorHint="@color/navy"
        android:hint="@string/sname"
        android:backgroundTint="@android:color/holo_green_light"
        android:gravity="center_horizontal"
        android:layout_below="@id/fname"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uname"
        android:textColorHint="@color/navy"
        android:hint="@string/uname"
        android:backgroundTint="@android:color/holo_green_light"
        android:gravity="center_horizontal"
        android:layout_below="@id/sname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Email"
        android:textColorHint="@color/navy"
        android:hint="@string/email"
        android:backgroundTint="@android:color/holo_green_light"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:layout_below="@id/uname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditText2"
        android:textColorHint="@color/navy"
        android:backgroundTint="@android:color/holo_green_light"
        android:gravity="center_horizontal"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_below="@id/Email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditText3"
        android:textColorHint="@color/navy"
        android:backgroundTint="@android:color/holo_green_light"
        android:gravity="center_horizontal"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:layout_below="@id/EditText2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/linear"
        android:layout_below="@+id/EditText3">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/green"
            android:id="@+id/button"
            android:layout_below="@id/EditText2"/>


    </LinearLayout>

</RelativeLayout>


