<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/scan"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_centerHorizontal="true"
android:background="@color/white"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="com.example.janeeastwood123.refundo.Scan">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:id="@+id/lin1">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:id="@+id/img"
        android:layout_alignParentRight="true"
        android:src="@drawable/refundo"/>


</LinearLayout>


<TextView

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/scantext"
    android:typeface="normal"
    android:textSize="22sp"
    android:textColor="@color/navy"
    android:id="@+id/welcome1"
    android:layout_below="@id/lin1"/>





<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingTop="10dp"
    android:id="@+id/linear1"
    android:layout_below="@+id/welcome1">

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:textColor="@color/navy"
        android:background="@color/green"
        android:id="@+id/button1" />

</LinearLayout>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/or"
        android:typeface="normal"
        android:textSize="22sp"
        android:textColor="@color/navy"
        android:id="@+id/ok"
        android:layout_below="@id/linear1"
        android:padding="20dp"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/addnew"
        android:typeface="normal"
        android:textSize="22sp"
        android:textColor="@color/navy"
        android:id="@+id/message"
        android:layout_below="@id/ok" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditText1"
        android:textColorHint="@color/navy"
        android:hint="Order Number"
        android:backgroundTint="@android:color/holo_green_light"
        android:gravity="center_horizontal"
        android:layout_below="@+id/message"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditText2"
        android:textColorHint="@color/navy"
        android:backgroundTint="@android:color/holo_green_light"
        android:gravity="center_horizontal"
        android:hint="Company"
        android:layout_below="@id/EditText1"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:id="@+id/linear2"
        android:layout_below="@+id/EditText2">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/navy"
            android:background="@color/green"
            android:id="@+id/submit" />

    </LinearLayout>





</RelativeLayout>


