<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/returns"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_centerHorizontal="true"
android:background="@color/white"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="com.example.janeeastwood123.refundo.Welcome">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:id="@+id/lin1">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:id="@+id/img"
        android:layout_alignParentRight="true"
        android:src="@drawable/refundo"/>


</LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/myreturns"
        android:typeface="normal"
        android:textSize="22sp"
        android:textColor="@color/navy"
        android:id="@+id/welcome1"
        android:layout_below="@id/lin1"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/checklist"
        android:typeface="normal"
        android:textSize="15sp"
        android:textColor="@color/navy"
        android:id="@+id/select"
        android:layout_below="@id/welcome1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lin2"
        android:layout_below="@id/select"
        android:paddingTop="30dp">


<TextView

    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:text="@string/asos"
    android:typeface="normal"
    android:textSize="25sp"
    android:textColor="@color/navy"
    android:id="@+id/asos"
    android:layout_below="@id/welcome1"
    android:autoLink="all"
    android:linksClickable="true"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            />

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lin3"
        android:layout_below="@id/lin2"
        android:paddingTop="30dp">


        <TextView

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/newlook"
            android:typeface="normal"
            android:textSize="25sp"
            android:textColor="@color/navy"
            android:id="@+id/newlook"
            android:layout_below="@id/welcome1"
            android:autoLink="all"
            android:linksClickable="true"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lin4"
        android:layout_below="@id/lin3"
        android:paddingTop="30dp">


        <TextView

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/topshop"
            android:typeface="normal"
            android:textSize="25sp"
            android:textColor="@color/navy"
            android:id="@+id/topshop"
            android:layout_below="@id/lin3"
            android:autoLink="all"
            android:linksClickable="true"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:id="@+id/lin5"
        android:layout_below="@+id/lin4">

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/refundhistory"
            android:textColor="@color/navy"
            android:backgroundTint="@color/green"
            android:id="@+id/button1"
           />

    </LinearLayout>


</RelativeLayout>


