<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.janeeastwood123.refundo.MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/lin1">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:id="@+id/img"
            android:layout_alignParentRight="true"
            android:src="@drawable/refundo"/>


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:typeface="normal"
        android:textSize="14sp"
        android:textColor="@color/navy"
        android:id="@+id/textViewLogin"
        android:layout_below="@id/lin1"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditText1"
        android:textColorHint="@color/navy"
        android:hint="Username"
        android:backgroundTint="@android:color/holo_green_light"
        android:gravity="center_horizontal"
        android:layout_below="@id/textViewLogin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditText2"
        android:textColorHint="@color/navy"
        android:backgroundTint="@android:color/holo_green_light"
        android:gravity="center_horizontal"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_below="@id/EditText1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/checkbox"
        android:layout_below="@+id/EditText2">

        <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/red"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/linear1"
        android:layout_below="@+id/checkbox">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btn"
            android:textColor="@color/green"
            android:id="@+id/button"
            android:layout_below="@id/EditText2"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            android:textColor="@color/red"
            android:id="@+id/button2"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/EditText2"
            android:layout_toEndOf="@+id/EditText2" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear2"
        android:layout_below="@+id/linear1"
        android:weightSum="1">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/attempts"
            android:textColor="@color/navy"
            android:gravity="center"
            android:id="@+id/textView2"
            android:layout_below="@+id/button"
            android:textSize="18dp"
            android:padding="8dp"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_below="@+id/button"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="14dp"
            android:padding="@dimen/activity_vertical_margin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:id="@+id/linear3"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:gravity="center"
            android:text="@string/forgot"
            android:textColor="@color/navy"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="14dp"
            android:autoLink="all"
            android:linksClickable="true"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:id="@+id/linear4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/textView5"
            android:gravity="center"
            android:text="@string/regnow"
            android:textColor="@color/navy"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="14dp"
            android:autoLink="all"
            android:linksClickable="true"/>



    </LinearLayout>





</RelativeLayout>


