<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/myaccount"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_centerHorizontal="true"
android:background="@color/white"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="com.example.janeeastwood123.refundo.Welcome">


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/myaccount"
    android:typeface="normal"
    android:textSize="22sp"
    android:textColor="@color/navy"
    android:id="@+id/welcome1"
    android:layout_below="@id/lin1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:id="@+id/linear2"
        android:layout_below="@+id/welcome1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="62dp">

        <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/changepassword"
        android:textColor="@color/navy"
        android:backgroundTint="@color/green"
        android:id="@+id/button2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:id="@+id/linear3"
        android:layout_below="@+id/linear2"
        android:layout_alignParentStart="true">
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/orderHistory"
                android:textColor="@color/navy"
                android:backgroundTint="@color/green"
                android:id="@+id/button3"
                android:layout_below="@+id/button2"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/lin1"
        android:layout_below="@+id/logoutImg"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:id="@+id/img"
            android:layout_alignParentRight="true"
            android:src="@drawable/refundo"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:src="@drawable/logout"
        android:id="@+id/logoutImg"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/welcome1" />
</RelativeLayout>


